// Copyright 2021 The Simlin Authors. All rights reserved.
// Use of this source code is governed by the Apache License,
// Version 2.0, that can be found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

message File {
  string id = 1; // hex sha256 of rest of message
  repeated string prev_id = 2; // id of previous file; multiple in case of merge
  string project_id = 3;
  string user_id = 4; // user who created this content
  google.protobuf.Timestamp created = 5;
  string json_contents = 6;
  bytes project_contents = 7;
}
