// Copyright 2021 The Simlin Authors. All rights reserved.
// Use of this source code is governed by the Apache License,
// Version 2.0, that can be found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Project {
  string id = 1; // "owner/project-name"
  string display_name = 11;
  string owner_id = 2;
  bool is_public = 3;
  string description = 4;
  repeated string tags = 5;
  repeated string collaborator_id = 6;
  int32 version = 7;
  string file_id = 8;
  google.protobuf.Timestamp created = 9;
  google.protobuf.Timestamp updated = 10;
}
